--- a/app/src/main/res/layout/activity_bank_america_order_review.xml
+++ b/app/src/main/res/layout/activity_bank_america_order_review.xml
@@ -23,6 +23,7 @@
         android:gravity="center"
         android:fontFamily="@font/opensans_semibold"
         android:textSize="@dimen/_12ssp"
+        android:textColor="@color/black"
         android:layout_marginBottom="@dimen/_7sdp"
         />
     <LinearLayout
@@ -64,6 +65,7 @@
             android:fontFamily="@font/opensans_regular"
             android:textSize="@dimen/_11ssp"
             android:layout_weight="1"
+            android:textColor="@color/xdark_gray"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -71,6 +73,7 @@
             android:text="Bank of America ••••5359"
             android:layout_marginLeft="@dimen/_30sdp"
             android:fontFamily="@font/opensans_semibold"
+            android:textColor="@color/primary_black"
             />
         </LinearLayout>
 
@@ -88,6 +91,7 @@
             android:fontFamily="@font/opensans_regular"
             android:textSize="@dimen/_11ssp"
             android:layout_weight="1"
+            android:textColor="@color/xdark_gray"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -95,6 +99,7 @@
             android:text="159.40 USD"
             android:fontFamily="@font/opensans_semibold"
             android:layout_marginLeft="@dimen/_96sdp"
+            android:textColor="@color/primary_black"
             />
     </LinearLayout>
     <LinearLayout
@@ -110,6 +115,7 @@
             android:fontFamily="@font/opensans_regular"
             android:textSize="@dimen/_11ssp"
             android:layout_weight="1"
+            android:textColor="@color/xdark_gray"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -119,6 +125,7 @@
             android:textSize="@dimen/_11ssp"
             android:layout_weight="1"
             android:gravity="right"
+            android:textColor="@color/primary_black"
             android:layout_marginLeft="@dimen/_124sdp"
             />
     </LinearLayout>
@@ -136,6 +143,7 @@
             android:text="Total "
             android:textSize="@dimen/_11ssp"
             android:fontFamily="@font/opensans_bold"
+            android:textColor="@color/primary_black"
             />
         <TextView
             android:layout_width="match_parent"
@@ -162,7 +170,6 @@
         app:layout_constraintRight_toRightOf="parent"
         android:background="@drawable/shape_round_rectable"
         app:layoutDescription="@xml/activity_swipe_unloack_scene"
-        android:layout_marginBottom="@dimen/_23sdp"
         >
 
         <TextView
