--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -98,7 +98,8 @@
                     android:textSize="@dimen/_12ssp"
                     android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                     android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
-
+                    android:singleLine="true"
+                    android:maxLines="1"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
