Login Touch/ Face changes

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -86,18 +86,20 @@
                     android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="Coyni@example.com"
                     android:imeOptions="actionDone"
                     android:inputType="textEmailAddress"
                     android:maxLength="255"
+                    android:maxLines="1"
                     android:padding="@dimen/_12sdp"
+                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                    android:singleLine="true"
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:textSize="@dimen/_12ssp"
-                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
 
                     />
 
