--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,12 +103,12 @@
                     android:longClickable="false"
                     android:maxLines="1"
                     android:padding="@dimen/_14sdp"
+                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                     android:singleLine="true"
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp"
-                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -152,11 +152,11 @@
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_green"
-                    app:endIconMode="custom"
                     app:endIconTint="@color/primary_green"
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
-                    app:hintTextColor="@color/primary_green">
+                    app:hintTextColor="@color/primary_green"
+                    app:passwordToggleTint="@color/xdark_gray">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etPassword"
@@ -170,12 +170,12 @@
                         android:longClickable="false"
                         android:maxLength="12"
                         android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                         android:singleLine="true"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
                         android:textCursorDrawable="@drawable/cursor_color"
-                        android:textSize="@dimen/_12ssp"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
+                        android:textSize="@dimen/_12ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -186,7 +186,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
                     android:layout_marginRight="@dimen/_10sdp"
-                    android:src="@drawable/ic_faceid" />
+                    android:src="@drawable/ic_faceid"
+                    android:visibility="visible" />
 
             </RelativeLayout>
 
